# ITKIT

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  mkdocs.yml  paper.bib  paper.md  pyproject.toml  pyrightconfig.json  pytest.ini  readme.md
.github/prompts/: generalCopilot.prompt.md
.github/workflows/: CI.yml  auto-release.yml  docker-release.yml  docs-preview.yml  lint.yml  pre-commit.yml  publish-to-pypi.yml  pytest.yml  python-package.yml  test.yml
.workflow/: pipeline-20250919.yml
CI-CD/: CICD-Readme.md  Dockerfile.itkit  MakePyTorchNGCDocker.dockerfile  README.md  build-images.sh  prepare_itkit_containers.sh  run-CI.sh  run-container.sh
SlicerITKIT/: CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  __init__.py
SlicerITKIT/ITKITInference/: CMakeLists.txt  ITKITInference.py  example_usage.py
SlicerITKIT/ITKITInference/Resources/Icons/: ITKITInference.png.txt
SlicerITKIT/server/: README.md  __init__.py  itkit_server.py  requirements.txt
SlicerITKIT/src_module/: CMakeLists.txt  ITKIT.py  ITKITClient.py  ITKITLogic.py  ITKITWidget.py  local_data_io.py
docker/: build_image_from_PyTorchNGC.dockerfile
docs/: api_reference.md  contributing.md  dataset_structure.md  datasets.md  faq.md  framework_integration.md  index.md  installation.md  itk_aug.md  itk_check.md  itk_combine.md  itk_convert.md  itk_evaluate.md  itk_extract.md  itk_infer.md  itk_orient.md  itk_patch.md  itk_resample.md  models.md  preprocessing.md  quickstart.md  requirements.txt  slicer_integration.md  web_interface.md
examples/: mmrun.sh  resample_usage_example.py  visualization_example.py
examples/Train/: mmrun.sh
examples/Train/1.0.TrainDemo/: mgam.py
examples/Train/1.0.TrainTimePatchUseTorchIO/: mgam.py
examples/Train/1.1.TrainTimePatchUseMONAI/: mgam.py
examples/configs/0.0.AbdomenCT1K_TorchIO/: SegFormer3D.py  mgam.py
examples/configs/0.1.AbdomenCT1K_MONAI/: SegFormer3D.py  mgam.py
examples/configs/0.2.AbdomenCT1K_ITKIT/: MedNeXt.py  mgam.py
examples/configs/1.0.TsdMRI_TorchIO/: mgam.py
examples/configs/1.1.TsdMRI_MONAI/: mgam.py
examples/configs/1.2.TsdMRI_ITKIT/: MedNeXt.py  mgam.py
itkit/criterions/: segment.py
itkit/dataset/: TorchIO.py  __init__.py  base.py  base_convert.py  monai.py  torchio.py
itkit/dataset/AbdomenCT_1K/: __init__.py  convert_nii_mha.py  meta.py  mm_dataset.py
itkit/dataset/BraTs2024/: convert_nii_mha.py  meta.py  mm_dataset.py
itkit/dataset/CTGastricCancer2023/: convert_dcm_mha.py  extract_foreground_2D_pair.py  mm_dataset.py
itkit/dataset/CTSpine1K/: convert_nii_mha.py  convert_to_mha.py  meta.py  mm_dataset.py
itkit/dataset/CT_ORG/: convert_nii_mha.py  meta.py  mm_dataset.py
itkit/dataset/Dr_Peng_LiverSeg/: __init__.py  meta.py  mm_dataset.py
itkit/dataset/FLARE_2022/: convert_nii_mha.py  meta.py  mm_dataset.py
itkit/dataset/FLARE_2023/: convert_nii_mha.py  meta.py  mm_dataset.py
itkit/dataset/FudanTumor/: mm_dataset.py
itkit/dataset/GeneralDataset/: mm_dataset.py
itkit/dataset/ImageTBAD/: convert_nii_mha.py  meta.py  (+1 more)
itkit/gui/: ItkTabs.py  __init__.py  app.py  runner.py
itkit/io/: VallinaIO_DcmMha.py  dcm_toolkit.py  nii_toolkit.py  sitk_toolkit.py
itkit/mm/: __init__.py  experiment.py  inference.py  mgam_models.py  mmeng_PlugIn.py  mmseg_Dev3D.py  mmseg_PlugIn.py  run.py  sliding_window.py  summarize_test.py  summarize_train.py  task_models.py  visualization.py
itkit/models/: AutoWindow.py  DSNet.py  EGE_UNet.py  EfficientFormer.py  EfficientNet.py  FastSlow.py  FudanTumor.py  MedNeXt.py  MoCo.py  MomentumModel.py  ReconSelfSup.py  RoseCellCount.py  SMP_Segformer.py  Sarcopenia.py  SegMamba.py  SelfSup.py  UNETR.py  UNet3Plus.py  base_timm.py  losses.py  utils.py
itkit/process/: ClassRemap.py  ConstructSample.py  DistortionAugment.py  GeneralPreProcess.py  LoadBiomedicalData.py  NDArray.py  OpticalFlowAugmentation.py  Split2D.py  Split3D.py  base_processor.py  itk_aug.py  itk_check.py  itk_combine.py  itk_convert.py  itk_convert_format.py  itk_convert_monai.py  itk_convert_torchio.py  itk_evaluate.py  itk_extract.py  itk_infer.py  itk_orient.py  itk_patch.py  itk_resample.py  meta_json.py  metadata_models.py
itkit/utils/: CalcLabelDifference.py  DevelopUtils.py  DeviceSide.py  OpticalFlowVisualization.py  ResampleMha.py  SlideAvg.py  ckptclean.py  evaluation.py  itemize.py  search_tool.py  statistics.py  tcia_download.py
itkit/web/: __init__.py  app.py
jats/: paper.jats
mgamdata/criterions/: segment.py
mgamdata/dataset/: base.py
mgamdata/io/: sitk_toolkit.py
mgamdata/mm/: experiment.py  inference.py  mgam_models.py  mmeng_PlugIn.py  mmseg_Dev3D.py  mmseg_PlugIn.py  run.py  visualization.py
mgamdata/models/: DSNet.py  EfficientFormer.py  EfficientNet.py  FudanTumor.py  RoseCellCount.py  Sarcopenia.py  UNet3Plus.py  base_timm.py
mgamdata/process/: DistortionAugment.py  GeneralPreProcess.py  LoadBiomedicalData.py  OpticalFlowAugmentation.py  PreCrop_3D.py  Split2D.py  Split3D.py  Stretch.py  itk_aug.py  itk_check.py  itk_orient.py  itk_patch.py  itk_resample.py  meta_json.py
notebooks/: filter_itk_patched_only_background.ipynb
paper/: paper.bib
tests/: conftest.py  test_dataset_filtering.py  test_gui_entry_subprocess.py  test_gui_launch.py  test_io_dcm_toolkit.py  test_io_nii_toolkit.py  test_io_sitk_toolkit.py  test_io_vallina_dcm_mha.py  test_itk_aug.py  test_itk_check.py  test_itk_convert.py  test_itk_evaluate.py  test_itk_extract.py  test_itk_orient.py  test_itk_patch.py  test_itk_resample.py  test_mmrun.py  test_mmseg_plugin.py  test_models_io.py  test_monai_integration.py  test_onnx_metadata.py  test_process_mains.py  test_torchio_integration.py
tests/dataset/: test_dataset_extended.py  test_dataset_registry.py  test_monai_integration.py  test_torchio_integration.py
tests/gui/: test_gui_launch.py
tests/io/: test_io_dcm_toolkit.py  test_io_sitk_toolkit.py
tests/itk_process/: test_itk_combine.py  test_itk_convert.py  test_itk_evaluate.py  test_itk_extract.py  test_itk_orient.py  test_process_load.py
(+142 files in other folders)
