[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "itkit"
version = "3.5.1"
requires-python = ">= 3.10"
description = "mgam-ITKIT: Feasible Medical Image Operation based on SimpleITK API"
readme = "readme.md"
license = {file = "LICENSE"}
dependencies = [
  "numpy>=2.2.6",
  "SimpleITK>=2.5.0",
  "opencv-python-headless>=4.11",
  "openpyxl",
  "pandas",
  "scikit-image",
  "scikit-learn",
  "scipy",
  "future",
  "tensorboard",
  "orjson",
  "tqdm",
  "colorama",
  "ml_collections",
  "seaborn",
  "matplotlib",
  "matplotlib-inline",
  "jupyter",
  "colored",
  "albumentations",
  "ftfy",
  "deprecated",
  "pydantic",
  "pydicom",
  "pynrrd",
  "nibabel",
  "tcia_utils",
]

[project.optional-dependencies]
dev = [
  "h5py",
  "pylint-django",
  "HolisticTraceAnalysis",
  "pynvml",
  "pytest",
  "psutil",
  "memory-profiler",
  "types-colorama",
  "types-tqdm",
  "types-openpyxl",
  "pandas-stubs",
  "scipy-stubs",
  "pyright",
  "autopep8",
  "black",
  "isort",
  "mypy",
  "pyupgrade",
]
nvidia = [
  "onnx",
  "onnxruntime",
  "onnxruntime-gpu",
  "onnx_graphsurgeon",
  "polygraphy",
  "tensorrt",
]
pathology = [
  "opensdpc",
  "openslide-python",
  "openslide-bin",
]
pytorch = [
  "lightning",
  "timm",
  "deepspeed",
]
mm = [
  "ftfy",
  "regex",
]
gui = [
  "PyQt6",
]

[project.scripts]
mmrun = "itkit.mm.run:main"
mmconc = "itkit.mm.summarize:main"
itk_resample = "itkit.process.itk_resample:main"
itk_orient = "itkit.process.itk_orient:main"
itk_patch = "itkit.process.itk_patch:main"
itk_check = "itkit.process.itk_check:main"
itk_aug = "itkit.process.itk_aug:main"
itk_extract = "itkit.process.itk_extract:main"
itkit-app = "itkit.gui.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["itkit*"]

[tool.pyright]
pythonVersion = "3.14"
include = [
  "itkit/process",
  "itkit/mm",
  "itkit/io",
  "itkit/lightning",
]
exclude = [
  "**/__pycache__/**",
  "**/.venv/**",
  "**/.git/**",
  "build/**",
  "dist/**",
  "**/*.egg-info/**"
]
reportMissingImports = false
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false
reportPrivateImportUsage = false
reportOptionalMemberAccess = false
reportOptionalSubscript = false

[tool.isort]
profile = "black"
src_paths = ["itkit"]
line_length = 150

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
markers = [
    "gui: marks tests that require a Qt GUI context (can run headless with QT_QPA_PLATFORM=offscreen)",
    "itk_process: marks tests that execute itk process script mains",
    "mm: marks tests that touch MMEngine runner entry",
    "torch: marks tests that require PyTorch",
]
